[package]
name = "charon"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
acme-lib = "0.8.2"
ahash = "0.7.6"
arc-swap = "1.4.0"
chrono = "0.4.19"
color-eyre = { version = "0.5.11", default-features = false }
eyre = "0.6.5"
futures-util = "0.3.17"
headers = "0.3.5"
hyper = { version = "0.14.14", features = ["full"] }
log = { version = "0.4.14", features = ["release_max_level_info"] }
parking_lot = "0.11.2"
pin-project = "1.0.8"
pretty_env_logger = "0.4.0"
rustls = { version = "0.20.0", default-features = false }
rustls-pemfile = "0.2.1"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
tokio-rustls = "0.23.0"
toml = "0.5.8"
tower = "0.4.10"

[profile.release]
lto = true
