[package]
name = "charon"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
acme-lib = "0.8.2"
ahash = "0.8.3"
arc-swap = "1.6.0"
async-acme = { version = "0.3.1", features = ["hyper_rustls"] }
basic-toml = "0.1.2"
chrono = "0.4.24"
color-eyre = { version = "0.6.2", default-features = false }
eyre = "0.6.8"
futures-util = "0.3.27"
headers = "0.3.8"
hyper = { version = "0.14.25", features = ["full"] }
log = { version = "0.4.17", features = ["release_max_level_info"] }
parking_lot = "0.12.1"
pin-project = "1.0.12"
pretty_env_logger = "0.4.0"
rustls = { version = "0.20.8", default-features = false }
rustls-pemfile = "1.0.2"
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tokio-rustls = "0.23.4"
tower = "0.4.13"

[profile.release]
lto = true
strip = true
